deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: web-deployment
  labels:
    app: dev-test
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: dev-test
    spec:
      containers:
        - name: web
          image: gcr.io/image-name:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
