service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-test
  annotations:
      service.alpha.kubernetes.io/app-protocols: '{"my-https-port":"HTTPS"}'
spec:
  selector:
    app: dev-test
  ports:
    - name: http
      protocol: TCP
      port: 80
    - name: my-https-port
      protocol: TCP
      port: 443
  type: NodePort
